tests/sumo/output/e1/errors/lane_false/errors.sumo
Error: The lane with the id 'xxx' is not known (while building e1Detector '4/1to3/1').
Quitting (on error).
